fix(app/projects): fix sort filters active state alignment

--- a/app/styles/app/projects.scss
+++ b/app/styles/app/projects.scss
@@ -181,16 +181,19 @@ $projects_image_path: "/images/app/projects_list/";
 
          .sort {
             &.active {
+               span {
+                  margin-right: -10px;
+               }
                padding-left: 5px;
             }
             &.icon-sort-desc {
                // sort_active_sprite
-               background: url($projects_image_path + '/sort-active-sprite.png') 0 -52px no-repeat scroll #2c4858;
+               background: url($projects_image_path + '/sort-active-sprite.png') 4px -52px no-repeat scroll #2c4858;
             }
 
             &.icon-sort-asc {
                // sort_active_sprite
-               background: url($projects_image_path + '/sort-active-sprite.png') 0 8px no-repeat scroll #2c4858;
+               background: url($projects_image_path + '/sort-active-sprite.png') 4px 8px no-repeat scroll #2c4858;
             }
          }
 
